# leptos-routes-reproduction

./: Cargo.toml
src/: lib.rs  main.rs
