[package]
name = "app_routes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", optional = true, features = ["macros"] }
http = { version = "1.0.0", optional = true }
leptos_actix = { version = "0.6.11", optional = true }
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
leptos = { version = "0.6.11" }
leptos_meta = { version = "0.6.11" }
leptos_router = { version = "0.6.11" }
log = "0.4"
console_error_panic_hook = "0.1.7"
uuid = { version = "1", features = ["v4"] }

[features]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:actix-files",
    "dep:actix-web",
    "dep:leptos_actix",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "app_routes"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
assets-dir = "assets"
bin-features = ["ssr"]
lib-features = ["hydrate"]
bin-default-features = false
lib-profile-release = "wasm-release"
